# movie-review-and-sentiment-prediction

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: README.md  ci.yml  dependency-audit.yml
data/: README.md
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: README.md  academic_context.md  data_card.md  mlops.md  model_card.md  notebook_split.md  project_structure.md  security.md
models/: README.md
notebooks/: DELE_CA1_B.ipynb  README.md
notebooks/chapters/: 01_imports_and_setup.ipynb  02_data_cleaning.ipynb  03_exploratory_data_analysis.ipynb  04_data_preprocessing.ipynb  05_classification_augmented.ipynb  06_regression_augmented.ipynb  07_classification_no_augmentation.ipynb  08_regression_no_augmentation.ipynb  09_model_evaluation.ipynb  10_method_selection_final_evaluation.ipynb  README.md
reports/: README.md
reports/figures/: README.md
reports/metrics/: README.md
scripts/: README.md  split_notebook.py  validate_project.py
src/: README.md
src/movie_sentiment_rnn/: README.md  __init__.py  __main__.py  augmentation.py  cli.py  config.py  data.py  metrics.py  models.py  text.py  visualization.py
tests/: README.md  test_config_cli.py  test_data.py  test_metrics.py  test_text.py
