[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-sentiment-rnn"
version = "0.1.0"
description = "Reusable utilities and MLOps scaffolding for movie review sentiment RNN experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Goh Kun Ming" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "python-dotenv>=1.0",
  "scikit-learn>=1.4"
]

[project.optional-dependencies]
notebook = [
  "deep-translator>=1.11",
  "ipykernel>=6.29",
  "keras-tuner>=1.4",
  "langdetect>=1.0",
  "matplotlib>=3.8",
  "nltk>=3.8",
  "plotly>=5.20",
  "seaborn>=0.13",
  "tensorflow>=2.16; python_version < '3.13'",
  "tqdm>=4.66",
  "transformers>=4.40",
  "visualkeras>=0.1"
]
dev = [
  "bandit>=1.7",
  "nbformat>=5.10",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4"
]

[project.scripts]
movie-sentiment-rnn = "movie_sentiment_rnn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "*.ipynb",
  "DELE_CA1_B.ipynb",
  "notebooks"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "notebooks"]
